--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -139,6 +139,11 @@
             padding: 20px;
             border-radius: 10px;
             font-size: 16px;
+
+            &:disable {
+                /* background-color: #5182feb4; */
+                cursor: not-allowed;
+            }
         }
 
         .emoji {
@@ -158,6 +163,11 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+
+            &:disable {
+                background-color: #5182feb4;
+                cursor: not-allowed;
+            }
         }
     }
 }
